[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { version = "1.3.1-pre.3" }
pebbles-game-io.path="io"

[build-dependencies]
gear-wasm-builder = { version = "1.3.1-pre.3" }
pebbles-game-io.path="io"

[dev-dependencies]
gtest = { version = "1.3.1-pre.3" }
pebbles-game-io.path="io"